--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/bluewhaleio2017/npmtest1/issues"
   },
-  "homepage": "https://github.com/bluewhaleio2017/npmtest1#readme"
+  "homepage": "https://github.com/bluewhaleio2017/npmtest1#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
